--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "f41a6afe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Staff ID Position Changed                            Control Items  \\\n",
+      "0       101             Left                              EUC 1 Name1   \n",
+      "1       102        No Change  EUC 2 Name2\\nEUC 3 Name3\\nOther 4 Name4   \n",
+      "2       102              Yes  EUC 2 Name2\\nEUC 3 Name3\\nOther 4 Name4   \n",
+      "3       102             Left  EUC 2 Name2\\nEUC 3 Name3\\nOther 4 Name4   \n",
+      "4       103        No Change                              EUC 5 Name5   \n",
+      "\n",
+      "  Control Domain  \n",
+      "0       EUC only  \n",
+      "1            mix  \n",
+      "2            mix  \n",
+      "3            mix  \n",
+      "4       EUC only  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'Record Type': ['EUC', 'EUC', 'EUC', 'Other', 'EUC'],\n",
+    "    'Record ID': [1, 2, 3, 4, 5],\n",
+    "    'Record Name': ['Name1', 'Name2', 'Name3', 'Name4', 'Name5'],\n",
+    "    'Staff ID': [101, 102, 102, 102, 103],\n",
+    "    'Position Changed': ['Left', 'No Change', 'Yes', 'Left', 'No Change']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define a function to concatenate control items and determine control domain\n",
+    "def concatenate_control_items(group):\n",
+    "    control_items = '\\n'.join(group['Record Type'] + ' ' + group['Record ID'].astype(str) + ' ' + group['Record Name'])\n",
+    "    record_types = group['Record Type'].unique()\n",
+    "    if len(record_types) > 1:\n",
+    "        control_domain = 'mix'\n",
+    "    elif 'EUC' in record_types:\n",
+    "        control_domain = 'EUC only'\n",
+    "    else:\n",
+    "        control_domain = 'Other'\n",
+    "    return pd.Series({\n",
+    "        'Control Items': control_items,\n",
+    "        'Control Domain': control_domain\n",
+    "    })\n",
+    "\n",
+    "# Group by 'Staff ID' and apply the function\n",
+    "result_df = df.groupby('Staff ID').apply(concatenate_control_items).reset_index()\n",
+    "\n",
+    "# Merge the result back to the original DataFrame to maintain original rows\n",
+    "final_df = df.drop(columns=['Record Type', 'Record ID', 'Record Name']).drop_duplicates().merge(result_df, on='Staff ID', how='left')\n",
+    "\n",
+    "# Print the final DataFrame\n",
+    "print(final_df)\n",
+    "\n",
+    "# Save the result to an Excel file if needed\n",
+    "final_df.to_excel('final_output.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "818cefda",
    "metadata": {},
