--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d07f8c",
+   "id": "38d49ffa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import openpyxl\n",
     "\n",
     "# Load the workbook and read all sheets\n",
     "file_path = 'path_to_your_excel_file.xlsx'\n",
@@ -31,24 +32,31 @@
     "    \n",
     "    return summary\n",
     "\n",
+    "# Open the workbook using openpyxl\n",
+    "wb = openpyxl.load_workbook(file_path)\n",
+    "\n",
     "# Process each sheet\n",
-    "with pd.ExcelWriter('output_file.xlsx', engine='openpyxl') as writer:\n",
-    "    for sheet_name, df in sheets_dict.items():\n",
-    "        # Create the summary table\n",
-    "        summary_table = create_summary_table(df)\n",
-    "        \n",
-    "        # Create a new dataframe to hold the organized data\n",
-    "        organized_data = pd.DataFrame()\n",
-    "        \n",
-    "        # Insert the summary title\n",
-    "        summary_title = pd.DataFrame([['Summary']], columns=[''])\n",
-    "        organized_data = pd.concat([organized_data, summary_title], ignore_index=True)\n",
-    "        \n",
-    "        # Insert the summary table\n",
-    "        organized_data = pd.concat([organized_data, summary_table], ignore_index=True)\n",
-    "        \n",
-    "        # Write the organized data to the Excel file\n",
-    "        organized_data.to_excel(writer, sheet_name=sheet_name, index=False, header=False, startrow=1)\n",
+    "for sheet_name in wb.sheetnames:\n",
+    "    df = sheets_dict[sheet_name]\n",
+    "    # Create the summary table\n",
+    "    summary_table = create_summary_table(df)\n",
+    "    \n",
+    "    # Create a new dataframe to hold the organized data\n",
+    "    organized_data = pd.DataFrame()\n",
+    "    \n",
+    "    # Insert the summary title\n",
+    "    summary_title = pd.DataFrame([['Summary']], columns=[''])\n",
+    "    organized_data = pd.concat([organized_data, summary_title], ignore_index=True)\n",
+    "    \n",
+    "    # Insert the summary table\n",
+    "    organized_data = pd.concat([organized_data, summary_table], ignore_index=True)\n",
+    "    \n",
+    "    # Convert the organized data to Excel format\n",
+    "    for r in openpyxl.utils.dataframe.dataframe_to_rows(organized_data, index=False, header=False):\n",
+    "        wb[sheet_name].append(r)\n",
+    "\n",
+    "# Save the updated workbook\n",
+    "wb.save('output_file.xlsx')\n",
     "\n",
     "print(\"Summary tables have been created and written to 'output_file.xlsx'.\")\n"
    ]
