--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d49ffa",
+   "id": "86bc41a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,14 @@
     "    # Group by 'Mapped L4' and 'Role_temp' and count 'High/Low'\n",
     "    summary = df.groupby(['Mapped L4', 'Role_temp', 'High/Low']).size().unstack(fill_value=0).reset_index()\n",
     "    \n",
-    "    # Add total counts for each 'Mapped L4' and 'Role_temp'\n",
-    "    summary['Total'] = summary.sum(axis=1)\n",
+    "    # Rename columns for clarity\n",
     "    summary = summary.rename(columns={'High': 'High Count', 'Low': 'Low Count'})\n",
     "    \n",
+    "    # Add total counts for each 'Mapped L4' and 'Role_temp'\n",
+    "    summary['Total'] = summary['High Count'] + summary['Low Count']\n",
+    "    \n",
     "    # Add overall total counts\n",
-    "    overall_totals = summary.sum(numeric_only=True).to_frame().T\n",
+    "    overall_totals = summary[['High Count', 'Low Count', 'Total']].sum().to_frame().T\n",
     "    overall_totals['Mapped L4'] = 'Total'\n",
     "    overall_totals['Role_temp'] = ''\n",
     "    summary = pd.concat([summary, overall_totals], ignore_index=True)\n",
@@ -41,6 +43,9 @@
     "    # Create the summary table\n",
     "    summary_table = create_summary_table(df)\n",
     "    \n",
+    "    # Convert the summary table to a format suitable for writing to Excel\n",
+    "    summary_table_str = summary_table.astype(str)\n",
+    "    \n",
     "    # Create a new dataframe to hold the organized data\n",
     "    organized_data = pd.DataFrame()\n",
     "    \n",
@@ -49,7 +54,7 @@
     "    organized_data = pd.concat([organized_data, summary_title], ignore_index=True)\n",
     "    \n",
     "    # Insert the summary table\n",
-    "    organized_data = pd.concat([organized_data, summary_table], ignore_index=True)\n",
+    "    organized_data = pd.concat([organized_data, summary_table_str], ignore_index=True)\n",
     "    \n",
     "    # Convert the organized data to Excel format\n",
     "    for r in openpyxl.utils.dataframe.dataframe_to_rows(organized_data, index=False, header=False):\n",
