--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,12 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86bc41a0",
+   "id": "61c5ff40",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import openpyxl\n",
     "\n",
     "# Load the workbook and read all sheets\n",
@@ -46,19 +45,17 @@
     "    # Convert the summary table to a format suitable for writing to Excel\n",
     "    summary_table_str = summary_table.astype(str)\n",
     "    \n",
-    "    # Create a new dataframe to hold the organized data\n",
-    "    organized_data = pd.DataFrame()\n",
-    "    \n",
     "    # Insert the summary title\n",
     "    summary_title = pd.DataFrame([['Summary']], columns=[''])\n",
-    "    organized_data = pd.concat([organized_data, summary_title], ignore_index=True)\n",
     "    \n",
-    "    # Insert the summary table\n",
-    "    organized_data = pd.concat([organized_data, summary_table_str], ignore_index=True)\n",
+    "    # Combine the summary title and the summary table\n",
+    "    organized_data = pd.concat([summary_title, summary_table_str], ignore_index=True)\n",
     "    \n",
-    "    # Convert the organized data to Excel format\n",
-    "    for r in openpyxl.utils.dataframe.dataframe_to_rows(organized_data, index=False, header=False):\n",
-    "        wb[sheet_name].append(r)\n",
+    "    # Write the organized data to the corresponding sheet\n",
+    "    ws = wb[sheet_name]\n",
+    "    for r_idx, row in organized_data.iterrows():\n",
+    "        for c_idx, value in enumerate(row):\n",
+    "            ws.cell(row=r_idx+1, column=c_idx+1, value=value)\n",
     "\n",
     "# Save the updated workbook\n",
     "wb.save('output_file.xlsx')\n",
