--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c5ff40",
+   "id": "7c4856ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,27 @@
     "\n",
     "# Function to create the summary table for each sheet\n",
     "def create_summary_table(df):\n",
-    "    # Group by 'Mapped L4' and 'Role_temp' and count 'High/Low'\n",
-    "    summary = df.groupby(['Mapped L4', 'Role_temp', 'High/Low']).size().unstack(fill_value=0).reset_index()\n",
+    "    # Group by 'Mapped L4', 'Role_temp', and 'High/Low' and count occurrences\n",
+    "    grouped = df.groupby(['Mapped L4', 'Role_temp', 'High/Low']).size().unstack(fill_value=0).reset_index()\n",
     "    \n",
-    "    # Rename columns for clarity\n",
-    "    summary = summary.rename(columns={'High': 'High Count', 'Low': 'Low Count'})\n",
+    "    # Rename columns for clarity and handle missing columns\n",
+    "    if 'High' not in grouped.columns:\n",
+    "        grouped['High'] = 0\n",
+    "    if 'Low' not in grouped.columns:\n",
+    "        grouped['Low'] = 0\n",
+    "\n",
+    "    grouped = grouped.rename(columns={'High': 'High Count', 'Low': 'Low Count'})\n",
     "    \n",
     "    # Add total counts for each 'Mapped L4' and 'Role_temp'\n",
-    "    summary['Total'] = summary['High Count'] + summary['Low Count']\n",
+    "    grouped['Total'] = grouped['High Count'] + grouped['Low Count']\n",
     "    \n",
     "    # Add overall total counts\n",
-    "    overall_totals = summary[['High Count', 'Low Count', 'Total']].sum().to_frame().T\n",
+    "    overall_totals = grouped[['High Count', 'Low Count', 'Total']].sum().to_frame().T\n",
     "    overall_totals['Mapped L4'] = 'Total'\n",
     "    overall_totals['Role_temp'] = ''\n",
-    "    summary = pd.concat([summary, overall_totals], ignore_index=True)\n",
+    "    grouped = pd.concat([grouped, overall_totals], ignore_index=True)\n",
     "    \n",
-    "    return summary\n",
+    "    return grouped\n",
     "\n",
     "# Open the workbook using openpyxl\n",
     "wb = openpyxl.load_workbook(file_path)\n",
@@ -42,20 +47,17 @@
     "    # Create the summary table\n",
     "    summary_table = create_summary_table(df)\n",
     "    \n",
-    "    # Convert the summary table to a format suitable for writing to Excel\n",
-    "    summary_table_str = summary_table.astype(str)\n",
-    "    \n",
     "    # Insert the summary title\n",
     "    summary_title = pd.DataFrame([['Summary']], columns=[''])\n",
     "    \n",
     "    # Combine the summary title and the summary table\n",
-    "    organized_data = pd.concat([summary_title, summary_table_str], ignore_index=True)\n",
+    "    organized_data = pd.concat([summary_title, summary_table], ignore_index=True)\n",
     "    \n",
     "    # Write the organized data to the corresponding sheet\n",
     "    ws = wb[sheet_name]\n",
     "    for r_idx, row in organized_data.iterrows():\n",
     "        for c_idx, value in enumerate(row):\n",
-    "            ws.cell(row=r_idx+1, column=c_idx+1, value=value)\n",
+    "            ws.cell(row=r_idx+2, column=c_idx+1, value=value)  # Start from row 2 to leave space for the title\n",
     "\n",
     "# Save the updated workbook\n",
     "wb.save('output_file.xlsx')\n",
