--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4856ec",
+   "id": "845fd542",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import openpyxl\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
     "\n",
     "# Load the workbook and read all sheets\n",
     "file_path = 'path_to_your_excel_file.xlsx'\n",
@@ -47,22 +48,28 @@
     "    # Create the summary table\n",
     "    summary_table = create_summary_table(df)\n",
     "    \n",
-    "    # Insert the summary title\n",
-    "    summary_title = pd.DataFrame([['Summary']], columns=[''])\n",
-    "    \n",
-    "    # Combine the summary title and the summary table\n",
-    "    organized_data = pd.concat([summary_title, summary_table], ignore_index=True)\n",
-    "    \n",
-    "    # Write the organized data to the corresponding sheet\n",
+    "    # Clear existing data in the sheet\n",
     "    ws = wb[sheet_name]\n",
-    "    for r_idx, row in organized_data.iterrows():\n",
-    "        for c_idx, value in enumerate(row):\n",
-    "            ws.cell(row=r_idx+2, column=c_idx+1, value=value)  # Start from row 2 to leave space for the title\n",
+    "    for row in ws.iter_rows(min_row=1, max_col=ws.max_column, max_row=ws.max_row):\n",
+    "        for cell in row:\n",
+    "            cell.value = None\n",
+    "    \n",
+    "    # Insert the summary title and headers\n",
+    "    ws.cell(row=2, column=1, value='Summary')\n",
+    "    headers = ['Mapped L4', 'Role_temp', 'High Count', 'Low Count', 'Total']\n",
+    "    for col_num, header in enumerate(headers, 1):\n",
+    "        ws.cell(row=3, column=col_num, value=header)\n",
+    "    \n",
+    "    # Write the summary table to the sheet\n",
+    "    for r_idx, row in enumerate(dataframe_to_rows(summary_table, index=False, header=False), 4):\n",
+    "        for c_idx, value in enumerate(row, 1):\n",
+    "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
     "\n",
     "# Save the updated workbook\n",
-    "wb.save('output_file.xlsx')\n",
+    "output_file_path = 'output_file.xlsx'\n",
+    "wb.save(output_file_path)\n",
     "\n",
-    "print(\"Summary tables have been created and written to 'output_file.xlsx'.\")\n"
+    "print(f\"Summary tables have been created and written to '{output_file_path}'.\")\n"
    ]
   },
   {
