--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "845fd542",
+   "id": "79dae3c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,26 @@
     "    \n",
     "    return grouped\n",
     "\n",
+    "# Function to create subtables\n",
+    "def create_subtables(df):\n",
+    "    unique_l4 = df['Mapped L4'].unique()\n",
+    "    subtable_data = []\n",
+    "    \n",
+    "    for l4 in unique_l4:\n",
+    "        subtable_data.append([l4])\n",
+    "        l4_data = df[df['Mapped L4'] == l4]\n",
+    "        unique_role_temp = l4_data['Role_temp'].unique()\n",
+    "        \n",
+    "        for role_temp in unique_role_temp:\n",
+    "            subtable_data.append([role_temp])\n",
+    "            role_temp_data = l4_data[l4_data['Role_temp'] == role_temp]\n",
+    "            subtable_data.append(role_temp_data[['Mapped L4', 'Role_temp', 'GCB Level', 'FRC Code', 'Country', 'City', 'High/Low']])\n",
+    "            subtable_data.append(['', ''])  # Blank rows\n",
+    "        \n",
+    "        subtable_data.append(['', '', ''])  # More blank rows after each unique Mapped L4\n",
+    "    \n",
+    "    return subtable_data\n",
+    "\n",
     "# Open the workbook using openpyxl\n",
     "wb = openpyxl.load_workbook(file_path)\n",
     "\n",
@@ -64,12 +84,39 @@
     "    for r_idx, row in enumerate(dataframe_to_rows(summary_table, index=False, header=False), 4):\n",
     "        for c_idx, value in enumerate(row, 1):\n",
     "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
-    "\n",
+    "    \n",
+    "    # Create the subtables\n",
+    "    subtables = create_subtables(df)\n",
+    "    \n",
+    "    # Find the row to start writing the subtables (two rows below the summary table)\n",
+    "    start_row = r_idx + 3  # Adding some space after the summary table\n",
+    "    \n",
+    "    # Write the subtables to the sheet\n",
+    "    for item in subtables:\n",
+    "        if isinstance(item, list) and len(item) == 1:  # Mapped L4 or Role_temp headings\n",
+    "            ws.cell(row=start_row, column=1, value=item[0])\n",
+    "            start_row += 1\n",
+    "        elif isinstance(item, pd.DataFrame):  # Subtable data\n",
+    "            # Write the subtable headers\n",
+    "            subtable_headers = ['Mapped L4', 'Role_temp', 'GCB Level', 'FRC Code', 'Country', 'City', 'High/Low']\n",
+    "            for col_num, header in enumerate(subtable_headers, 1):\n",
+    "                ws.cell(row=start_row, column=col_num, value=header)\n",
+    "            start_row += 1\n",
+    "            \n",
+    "            # Write the subtable rows\n",
+    "            for subtable_row in dataframe_to_rows(item, index=False, header=False):\n",
+    "                for col_num, value in enumerate(subtable_row, 1):\n",
+    "                    ws.cell(row=start_row, column=col_num, value=value)\n",
+    "                start_row += 1\n",
+    "        \n",
+    "        else:  # Blank rows\n",
+    "            start_row += len(item)\n",
+    "    \n",
     "# Save the updated workbook\n",
     "output_file_path = 'output_file.xlsx'\n",
     "wb.save(output_file_path)\n",
     "\n",
-    "print(f\"Summary tables have been created and written to '{output_file_path}'.\")\n"
+    "print(f\"Summary tables and subtables have been created and written to '{output_file_path}'.\")\n"
    ]
   },
   {
