--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79dae3c9",
+   "id": "677129b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,112 +11,50 @@
     "import openpyxl\n",
     "from openpyxl.utils.dataframe import dataframe_to_rows\n",
     "\n",
-    "# Load the workbook and read all sheets\n",
+    "# Load the workbook using openpyxl\n",
     "file_path = 'path_to_your_excel_file.xlsx'\n",
-    "sheets_dict = pd.read_excel(file_path, sheet_name=None)\n",
-    "\n",
-    "# Function to create the summary table for each sheet\n",
-    "def create_summary_table(df):\n",
-    "    # Group by 'Mapped L4', 'Role_temp', and 'High/Low' and count occurrences\n",
-    "    grouped = df.groupby(['Mapped L4', 'Role_temp', 'High/Low']).size().unstack(fill_value=0).reset_index()\n",
-    "    \n",
-    "    # Rename columns for clarity and handle missing columns\n",
-    "    if 'High' not in grouped.columns:\n",
-    "        grouped['High'] = 0\n",
-    "    if 'Low' not in grouped.columns:\n",
-    "        grouped['Low'] = 0\n",
-    "\n",
-    "    grouped = grouped.rename(columns={'High': 'High Count', 'Low': 'Low Count'})\n",
-    "    \n",
-    "    # Add total counts for each 'Mapped L4' and 'Role_temp'\n",
-    "    grouped['Total'] = grouped['High Count'] + grouped['Low Count']\n",
-    "    \n",
-    "    # Add overall total counts\n",
-    "    overall_totals = grouped[['High Count', 'Low Count', 'Total']].sum().to_frame().T\n",
-    "    overall_totals['Mapped L4'] = 'Total'\n",
-    "    overall_totals['Role_temp'] = ''\n",
-    "    grouped = pd.concat([grouped, overall_totals], ignore_index=True)\n",
-    "    \n",
-    "    return grouped\n",
-    "\n",
-    "# Function to create subtables\n",
-    "def create_subtables(df):\n",
-    "    unique_l4 = df['Mapped L4'].unique()\n",
-    "    subtable_data = []\n",
-    "    \n",
-    "    for l4 in unique_l4:\n",
-    "        subtable_data.append([l4])\n",
-    "        l4_data = df[df['Mapped L4'] == l4]\n",
-    "        unique_role_temp = l4_data['Role_temp'].unique()\n",
-    "        \n",
-    "        for role_temp in unique_role_temp:\n",
-    "            subtable_data.append([role_temp])\n",
-    "            role_temp_data = l4_data[l4_data['Role_temp'] == role_temp]\n",
-    "            subtable_data.append(role_temp_data[['Mapped L4', 'Role_temp', 'GCB Level', 'FRC Code', 'Country', 'City', 'High/Low']])\n",
-    "            subtable_data.append(['', ''])  # Blank rows\n",
-    "        \n",
-    "        subtable_data.append(['', '', ''])  # More blank rows after each unique Mapped L4\n",
-    "    \n",
-    "    return subtable_data\n",
-    "\n",
-    "# Open the workbook using openpyxl\n",
     "wb = openpyxl.load_workbook(file_path)\n",
+    "\n",
+    "# Initialize a list to collect summary data for each sheet\n",
+    "summary_data = []\n",
     "\n",
     "# Process each sheet\n",
     "for sheet_name in wb.sheetnames:\n",
-    "    df = sheets_dict[sheet_name]\n",
+    "    df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "    \n",
     "    # Create the summary table\n",
-    "    summary_table = create_summary_table(df)\n",
+    "    summary_table = create_summary_table(df)  # Assuming this function is already defined\n",
+    "\n",
+    "    # Get total counts from the summary table\n",
+    "    high_total = summary_table['High Count'].sum()\n",
+    "    low_total = summary_table['Low Count'].sum()\n",
+    "    total = summary_table['Total'].sum()\n",
     "    \n",
-    "    # Clear existing data in the sheet\n",
-    "    ws = wb[sheet_name]\n",
-    "    for row in ws.iter_rows(min_row=1, max_col=ws.max_column, max_row=ws.max_row):\n",
-    "        for cell in row:\n",
-    "            cell.value = None\n",
-    "    \n",
-    "    # Insert the summary title and headers\n",
-    "    ws.cell(row=2, column=1, value='Summary')\n",
-    "    headers = ['Mapped L4', 'Role_temp', 'High Count', 'Low Count', 'Total']\n",
-    "    for col_num, header in enumerate(headers, 1):\n",
-    "        ws.cell(row=3, column=col_num, value=header)\n",
-    "    \n",
-    "    # Write the summary table to the sheet\n",
-    "    for r_idx, row in enumerate(dataframe_to_rows(summary_table, index=False, header=False), 4):\n",
-    "        for c_idx, value in enumerate(row, 1):\n",
-    "            ws.cell(row=r_idx, column=c_idx, value=value)\n",
-    "    \n",
-    "    # Create the subtables\n",
-    "    subtables = create_subtables(df)\n",
-    "    \n",
-    "    # Find the row to start writing the subtables (two rows below the summary table)\n",
-    "    start_row = r_idx + 3  # Adding some space after the summary table\n",
-    "    \n",
-    "    # Write the subtables to the sheet\n",
-    "    for item in subtables:\n",
-    "        if isinstance(item, list) and len(item) == 1:  # Mapped L4 or Role_temp headings\n",
-    "            ws.cell(row=start_row, column=1, value=item[0])\n",
-    "            start_row += 1\n",
-    "        elif isinstance(item, pd.DataFrame):  # Subtable data\n",
-    "            # Write the subtable headers\n",
-    "            subtable_headers = ['Mapped L4', 'Role_temp', 'GCB Level', 'FRC Code', 'Country', 'City', 'High/Low']\n",
-    "            for col_num, header in enumerate(subtable_headers, 1):\n",
-    "                ws.cell(row=start_row, column=col_num, value=header)\n",
-    "            start_row += 1\n",
-    "            \n",
-    "            # Write the subtable rows\n",
-    "            for subtable_row in dataframe_to_rows(item, index=False, header=False):\n",
-    "                for col_num, value in enumerate(subtable_row, 1):\n",
-    "                    ws.cell(row=start_row, column=col_num, value=value)\n",
-    "                start_row += 1\n",
-    "        \n",
-    "        else:  # Blank rows\n",
-    "            start_row += len(item)\n",
-    "    \n",
+    "    # Append the data to the summary_data list\n",
+    "    summary_data.append({'Sheet Name': sheet_name, 'High Total': high_total, 'Low Total': low_total, 'Total': total})\n",
+    "\n",
+    "# Create a DataFrame from the summary data\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "\n",
+    "# Calculate grand totals\n",
+    "grand_totals = summary_df[['High Total', 'Low Total', 'Total']].sum()\n",
+    "summary_df = summary_df.append({'Sheet Name': 'Grand Total', 'High Total': grand_totals['High Total'], \n",
+    "                                 'Low Total': grand_totals['Low Total'], 'Total': grand_totals['Total']}, \n",
+    "                                ignore_index=True)\n",
+    "\n",
+    "# Add a new sheet for the summary\n",
+    "summary_sheet = wb.create_sheet(title='Complete Summary')\n",
+    "\n",
+    "# Write the summary DataFrame to the new sheet\n",
+    "for r_idx, row in enumerate(dataframe_to_rows(summary_df, index=False, header=True), 1):\n",
+    "    for c_idx, value in enumerate(row, 1):\n",
+    "        summary_sheet.cell(row=r_idx, column=c_idx, value=value)\n",
+    "\n",
     "# Save the updated workbook\n",
-    "output_file_path = 'output_file.xlsx'\n",
+    "output_file_path = 'output_file_with_summary.xlsx'\n",
     "wb.save(output_file_path)\n",
     "\n",
-    "print(f\"Summary tables and subtables have been created and written to '{output_file_path}'.\")\n"
+    "print(f\"Complete summary sheet has been created and written to '{output_file_path}'.\")\n"
    ]
   },
   {
