--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,102 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "766aba8c",
+   "id": "b143a1b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import openpyxl\n",
-    "from openpyxl.styles import PatternFill, Border, Side, Alignment, Font\n",
-    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
-    "\n",
-    "# Define styles\n",
-    "header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
-    "border = Border(left=Side(style='thin'), right=Side(style='thin'), top=Side(style='thin'), bottom=Side(style='thin'))\n",
-    "header_font = Font(bold=True)\n",
-    "\n",
     "# Load the workbook using openpyxl\n",
-    "file_path = 'path_to_your_excel_file.xlsx'\n",
+    "file_path = 'output_with_data.xlsx'  # Update with your output file path if different\n",
     "wb = openpyxl.load_workbook(file_path)\n",
-    "\n",
-    "# Initialize a list to collect summary data for each sheet\n",
-    "summary_data = []\n",
     "\n",
     "# Process each sheet\n",
     "for sheet_name in wb.sheetnames:\n",
     "    sheet = wb[sheet_name]\n",
-    "    df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
-    "    \n",
-    "    # Create the summary table\n",
-    "    summary_table = create_summary_table(df)  # Assuming this function is already defined\n",
     "\n",
-    "    # Get total counts from the summary table\n",
-    "    high_total = summary_table['High Count'].sum()\n",
-    "    low_total = summary_table['Low Count'].sum()\n",
-    "    total = summary_table['Total'].sum()\n",
-    "    \n",
-    "    # Append the data to the summary_data list\n",
-    "    summary_data.append({'Sheet Name': sheet_name, 'High Total': high_total, 'Low Total': low_total, 'Total': total})\n",
-    "\n",
-    "    # Write the summary table to the sheet\n",
-    "    for r_idx, row in enumerate(dataframe_to_rows(summary_table, index=False, header=True), start=2):\n",
-    "        for c_idx, value in enumerate(row, 1):\n",
-    "            cell = sheet.cell(row=r_idx, column=c_idx, value=value)\n",
+    "    # Format the summary table\n",
+    "    summary_start_row = 2  # Adjust if your summary table starts at a different row\n",
+    "    for row in sheet.iter_rows(min_row=summary_start_row, max_row=summary_start_row + len(summary_table), min_col=1, max_col=summary_table.shape[1]):\n",
+    "        for cell in row:\n",
     "            cell.border = border\n",
-    "            if r_idx == 2:  # Header row\n",
+    "            if cell.row == summary_start_row:\n",
     "                cell.fill = header_fill\n",
     "                cell.font = header_font\n",
     "\n",
-    "    # Assume `subtables` is a list of DataFrames representing the sub tables\n",
-    "    subtables = create_subtables(df)  # Placeholder for the actual function that generates subtables\n",
-    "    \n",
-    "    start_row = r_idx + 3  # Adjust starting row as needed\n",
-    "    for subtable in subtables:\n",
-    "        for r_idx, row in enumerate(dataframe_to_rows(subtable, index=False, header=True), start=start_row):\n",
-    "            for c_idx, value in enumerate(row, 1):\n",
-    "                cell = sheet.cell(row=r_idx, column=c_idx, value=value)\n",
-    "                cell.border = border\n",
-    "                if r_idx == start_row:  # Header row of the subtable\n",
-    "                    cell.fill = header_fill\n",
-    "                    cell.font = header_font\n",
-    "        start_row = r_idx + 3  # Adjust starting row for next subtable\n",
+    "    # Format the sub tables\n",
+    "    subtable_start_row = summary_start_row + len(summary_table) + 3  # Adjust based on your layout\n",
+    "    while True:\n",
+    "        # Assuming the first cell in each sub table is a header\n",
+    "        header_cell = sheet.cell(row=subtable_start_row, column=1)\n",
+    "        if not header_cell.value:\n",
+    "            break  # Stop if no more sub tables\n",
     "\n",
-    "# Create a DataFrame from the summary data\n",
-    "summary_df = pd.DataFrame(summary_data)\n",
-    "\n",
-    "# Calculate grand totals\n",
-    "grand_totals = summary_df[['High Total', 'Low Total', 'Total']].sum()\n",
-    "grand_totals_row = pd.DataFrame([{'Sheet Name': 'Grand Total', \n",
-    "                                   'High Total': grand_totals['High Total'], \n",
-    "                                   'Low Total': grand_totals['Low Total'], \n",
-    "                                   'Total': grand_totals['Total']}])\n",
-    "\n",
-    "# Concatenate the grand totals to the summary DataFrame\n",
-    "summary_df = pd.concat([summary_df, grand_totals_row], ignore_index=True)\n",
-    "\n",
-    "# Add a new sheet for the summary\n",
-    "summary_sheet = wb.create_sheet(title='Complete Summary')\n",
-    "\n",
-    "# Write the summary DataFrame to the new sheet\n",
-    "for r_idx, row in enumerate(dataframe_to_rows(summary_df, index=False, header=True), 1):\n",
-    "    for c_idx, value in enumerate(row, 1):\n",
-    "        cell = summary_sheet.cell(row=r_idx, column=c_idx, value=value)\n",
-    "        cell.border = border\n",
-    "        if r_idx == 1:  # Header row\n",
+    "        # Format the header row of the subtable\n",
+    "        for cell in sheet[subtable_start_row]:\n",
     "            cell.fill = header_fill\n",
     "            cell.font = header_font\n",
+    "            cell.border = border\n",
     "\n",
-    "# Save the updated workbook\n",
+    "        # Format the subtable rows\n",
+    "        for row in sheet.iter_rows(min_row=subtable_start_row + 1, max_row=subtable_start_row + len(subtable), min_col=1, max_col=subtable.shape[1]):\n",
+    "            for cell in row:\n",
+    "                cell.border = border\n",
+    "\n",
+    "        # Move to the next subtable\n",
+    "        subtable_start_row += len(subtable) + 3  # Adjust for blank rows\n",
+    "\n",
+    "# Save the updated workbook with formatting\n",
     "output_file_path = 'output_file_with_summary_and_formatting.xlsx'\n",
     "wb.save(output_file_path)\n",
     "\n",
-    "print(f\"Formatted data has been written to '{output_file_path}'.\")\n"
+    "print(f\"Formatted data has been written to '{output_file_path}'.\")\n",
+    "################\n",
+    "# Format the complete summary sheet\n",
+    "summary_sheet = wb['Complete Summary']\n",
+    "\n",
+    "for row in summary_sheet.iter_rows(min_row=1, max_row=summary_df.shape[0] + 1, min_col=1, max_col=summary_df.shape[1]):\n",
+    "    for cell in row:\n",
+    "        cell.border = border\n",
+    "        if cell.row == 1:\n",
+    "            cell.fill = header_fill\n",
+    "            cell.font = header_font\n",
+    "\n",
+    "# Save the final workbook with all formatting\n",
+    "output_file_path = 'final_output_with_formatting.xlsx'\n",
+    "wb.save(output_file_path)\n",
+    "\n",
+    "print(f\"Final formatted workbook has been saved as '{output_file_path}'.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae04499",
+   "id": "ff007e86",
    "metadata": {},
    "outputs": [],
    "source": [
